src/mega65/libc/conio.h



/** \m65libsummary{cputncxy}{Output N copies of a single character at X,Y coordinates}
    \m65libsyntax    {void cputncxy (unsigned char x, unsigned char y, unsigned char count, unsigned char c)}
    \m65libparam     {x}{The X coordinate where character will be printed}
    \m65libparam     {y}{The Y coordinate where character will be printed}
    \m65libparam     {count}{The number of characters to output}
    \m65libparam     {c}{The screen code of the characters to print}
*/
void cputncxy(unsigned char x, unsigned char y, unsigned char count, unsigned char c);


// making raw _cprintf available here to be used by cprintf and pcprintf
// don't use this call directly as it might go away in a future release  of the library
unsigned char _cprintf(const unsigned char translateCodes, const unsigned char* fmt, ...);

/*------------------------------------------------------------------------
  Keyboard input
  -----------------------------------------------------------------------*/
/** \m65libsummary{cgetc}{ Waits until a character is in the keyboard buffer and returns it }
    \m65libsyntax    {unsigned char cgetc (void);}
    \m65libretval    {The last character in the keyboard buffer }
    \m65libremarks   {Returned values are ASCII character codes}
*/
unsigned char cgetc(void);


/** \m65libsummary{kbhit}{ Returns the character in the keyboard buffer }
    \m65libsyntax    {unsigned char kbhit (void);}
    \m65libretval    {The character code in the keyboard buffer,  0 otherwise. }
    \m65libremarks   {Returned values are ASCII character codes}
*/
unsigned char kbhit(void);


/** \m65libsummary{getkeymodstate}{
   Return the key modifiers state.}
    \m65libsyntax    {unsigned char getkeymodstate(void)}
    \m65libretval    {A byte with the key modifier state bits,
    where bits:
   %<
    \begin{tabular}{lll}
    \textbf{Bit} & \textbf{Meaning} & \textbf{Constant}        \\
    0   & Right SHIFT State & \texttt{KEYMOD\_RSHIFT} \\
    1   & Left  SHIFT state & \texttt{KEYMOD\_LSHIFT} \\
    2   & CTRL state        & \texttt{KEYMOD\_CTRL}  \\
    3   & MEGA state        & \texttt{KEYMOD\_MEGA} \\
    4   & ALT state         & \texttt{KEYMOD\_ALT} \\
    5   & NOSCRL state      & \texttt{KEYMOD\_NOSCRL} \\
    6   & CAPSLOCK state    & \texttt{KEYMOD\_CAPSLOCK} \\
    7   & Reserved          & - \\
    \end{tabular}
    %>}
*/
unsigned char getkeymodstate(void);


/** \m65libsummary{flushkeybuf}{Flush the keyboard buffer}
    \m65libsyntax    {void flushkeybuf(void)}
*/
void flushkeybuf(void);


/** \m65libsummary{cinput}{Get input from keyboard, printing incoming characters at current position.}
    \m65libsyntax    {unsigned char cinput(char* buffer, unsigned char buflen, unsigned char flags)}
    \m65libparam     {buffer}{Target character buffer preallocated by caller}
    \m65libparam     {buflen}{Target buffer length in characters, including the null character terminator}
    \m65libparam     {flags}{Flags for input:  (default is accept all printable characters)
            %<
            \texttt{CINPUT\_ACCEPT\_NUMERIC} \\
            Accepts numeric characters. \\ \\
            \texttt{CINPUT\_ACCEPT\_LETTER}  \\
            Accepts letters.  \\ \\
            \texttt{CINPUT\_ACCEPT\_SYM}  \\
            Accepts symbols.  \\ \\
            \texttt{CINPUT\_ACCEPT\_ALL}\\
            Accepts all. Equals to \texttt{CINPUT\_ACCEPT\_NUMERIC \textbar CINPUT\_ACCEPT\_LETTER \textbar
   CINPUT\_ACCEPT\_SYM} \\ \\
            \texttt{CINPUT\_ACCEPT\_ALPHA} \\
            Accepts alphanumeric characters. Equals to \texttt{CINPUT\_ACCEPT\_NUMERIC \textbar CINPUT\_ACCEPT\_LETTER} \\ \\
            \texttt{CINPUT\_NO\_AUTOTRANSLATE}\\
            Disables the feature that makes cinput to autodisplay uppercase characters when standard lowercase character set
   is selected  and the user enters letters without the SHIFT key, that would display graphic characters instead of
   alphabetic ones. \\
            %>}

   \m65libretval    {Count of successfully read characters in buffer}
*/

unsigned char cinput(unsigned char* buffer, unsigned char buflen, unsigned char flags);