src/mega65/libc/bindings.rs

extern "C" {
    #[doc = " \\m65libsummary{cputncxy}{Output N copies of a single character at X,Y coordinates}\n\\m65libsyntax    {void cputncxy (unsigned char x, unsigned char y, unsigned char count, unsigned char c)}\n\\m65libparam     {x}{The X coordinate where character will be printed}\n\\m65libparam     {y}{The Y coordinate where character will be printed}\n\\m65libparam     {count}{The number of characters to output}\n\\m65libparam     {c}{The screen code of the characters to print}"]
    pub fn cputncxy(
        x: ::core::ffi::c_uchar,
        y: ::core::ffi::c_uchar,
        count: ::core::ffi::c_uchar,
        c: ::core::ffi::c_uchar,
    );
}
extern "C" {
    pub fn _cprintf(
        translateCodes: ::core::ffi::c_uchar,
        fmt: *const ::core::ffi::c_uchar,
        ...
    ) -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{cgetc}{ Waits until a character is in the keyboard buffer and returns it }\n\\m65libsyntax    {unsigned char cgetc (void);}\n\\m65libretval    {The last character in the keyboard buffer }\n\\m65libremarks   {Returned values are ASCII character codes}"]
    pub fn cgetc() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{kbhit}{ Returns the character in the keyboard buffer }\n\\m65libsyntax    {unsigned char kbhit (void);}\n\\m65libretval    {The character code in the keyboard buffer,  0 otherwise. }\n\\m65libremarks   {Returned values are ASCII character codes}"]
    pub fn kbhit() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{getkeymodstate}{\nReturn the key modifiers state.}\n\\m65libsyntax    {unsigned char getkeymodstate(void)}\n\\m65libretval    {A byte with the key modifier state bits,\nwhere bits:\n%<\n\\begin{tabular}{lll}\n\\textbf{Bit} & \\textbf{Meaning} & \\textbf{Constant}        \\\\\n0   & Right SHIFT State & \\texttt{KEYMOD\\_RSHIFT} \\\\\n1   & Left  SHIFT state & \\texttt{KEYMOD\\_LSHIFT} \\\\\n2   & CTRL state        & \\texttt{KEYMOD\\_CTRL}  \\\\\n3   & MEGA state        & \\texttt{KEYMOD\\_MEGA} \\\\\n4   & ALT state         & \\texttt{KEYMOD\\_ALT} \\\\\n5   & NOSCRL state      & \\texttt{KEYMOD\\_NOSCRL} \\\\\n6   & CAPSLOCK state    & \\texttt{KEYMOD\\_CAPSLOCK} \\\\\n7   & Reserved          & - \\\\\n\\end{tabular}\n%>}"]
    pub fn getkeymodstate() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{flushkeybuf}{Flush the keyboard buffer}\n\\m65libsyntax    {void flushkeybuf(void)}"]
    pub fn flushkeybuf();
}
extern "C" {
    #[doc = " \\m65libsummary{cinput}{Get input from keyboard, printing incoming characters at current position.}\n\\m65libsyntax    {unsigned char cinput(char* buffer, unsigned char buflen, unsigned char flags)}\n\\m65libparam     {buffer}{Target character buffer preallocated by caller}\n\\m65libparam     {buflen}{Target buffer length in characters, including the null character terminator}\n\\m65libparam     {flags}{Flags for input:  (default is accept all printable characters)\n%<\n\\texttt{CINPUT\\_ACCEPT\\_NUMERIC} \\\\\nAccepts numeric characters. \\\\ \\\\\n\\texttt{CINPUT\\_ACCEPT\\_LETTER}  \\\\\nAccepts letters.  \\\\ \\\\\n\\texttt{CINPUT\\_ACCEPT\\_SYM}  \\\\\nAccepts symbols.  \\\\ \\\\\n\\texttt{CINPUT\\_ACCEPT\\_ALL}\\\\\nAccepts all. Equals to \\texttt{CINPUT\\_ACCEPT\\_NUMERIC \\textbar CINPUT\\_ACCEPT\\_LETTER \\textbar\nCINPUT\\_ACCEPT\\_SYM} \\\\ \\\\\n\\texttt{CINPUT\\_ACCEPT\\_ALPHA} \\\\\nAccepts alphanumeric characters. Equals to \\texttt{CINPUT\\_ACCEPT\\_NUMERIC \\textbar CINPUT\\_ACCEPT\\_LETTER} \\\\ \\\\\n\\texttt{CINPUT\\_NO\\_AUTOTRANSLATE}\\\\\nDisables the feature that makes cinput to autodisplay uppercase characters when standard lowercase character set\nis selected  and the user enters letters without the SHIFT key, that would display graphic characters instead of\nalphabetic ones. \\\\\n%>}\n\n\\m65libretval    {Count of successfully read characters in buffer}"]
    pub fn cinput(
        buffer: *mut ::core::ffi::c_uchar,
        buflen: ::core::ffi::c_uchar,
        flags: ::core::ffi::c_uchar,
    ) -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn debug_msg(m: *mut ::core::ffi::c_char);
}
pub type int_least64_t = i64;
pub type uint_least64_t = u64;
pub type int_fast64_t = i64;
pub type uint_fast64_t = u64;
pub type int_least32_t = i32;
pub type uint_least32_t = u32;
pub type int_fast32_t = i32;
pub type uint_fast32_t = u32;
pub type int_least16_t = i16;
pub type uint_least16_t = u16;
pub type int_fast16_t = i16;
pub type uint_fast16_t = u16;
pub type int_least8_t = i8;
pub type uint_least8_t = u8;
pub type int_fast8_t = i8;
pub type uint_fast8_t = u8;
pub type intmax_t = ::core::ffi::c_longlong;
pub type uintmax_t = ::core::ffi::c_ulonglong;
extern "C" {
    pub fn opendir() -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn readdir(arg1: ::core::ffi::c_uchar) -> *mut m65_dirent;
}
extern "C" {
    pub fn closedir(arg1: ::core::ffi::c_uchar);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m65_dirent {
    pub d_ino: u32,
    pub d_off: u16,
    pub d_reclen: u32,
    pub d_type: u16,
    pub d_name: [::core::ffi::c_char; 256usize],
}
impl Default for m65_dirent {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
extern "C" {
    pub fn toggle_rom_write_protect();
}
extern "C" {
    pub fn closeall();
}
extern "C" {
    pub fn close(fd: ::core::ffi::c_uchar);
}
extern "C" {
    pub fn open(filename: *const ::core::ffi::c_char) -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn read512(buffer: *mut ::core::ffi::c_uchar) -> ::core::ffi::c_ushort;
}
extern "C" {
    pub fn chdir(filename: *const ::core::ffi::c_char) -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn chdirroot() -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn usleep(micros: u32);
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct dmagic_dmalist {
    pub option_0b: ::core::ffi::c_uchar,
    pub option_80: ::core::ffi::c_uchar,
    pub source_mb: ::core::ffi::c_uchar,
    pub option_81: ::core::ffi::c_uchar,
    pub dest_mb: ::core::ffi::c_uchar,
    pub option_85: ::core::ffi::c_uchar,
    pub dest_skip: ::core::ffi::c_uchar,
    pub end_of_options: ::core::ffi::c_uchar,
    pub command: ::core::ffi::c_uchar,
    pub count: ::core::ffi::c_uint,
    pub source_addr: ::core::ffi::c_uint,
    pub source_bank: ::core::ffi::c_uchar,
    pub dest_addr: ::core::ffi::c_uint,
    pub dest_bank: ::core::ffi::c_uchar,
    pub sub_cmd: ::core::ffi::c_uchar,
    pub modulo: ::core::ffi::c_uint,
}
extern "C" {
    pub static mut dmalist: dmagic_dmalist;
}
extern "C" {
    pub static mut dma_byte: ::core::ffi::c_uchar;
}
extern "C" {
    pub fn mega65_io_enable();
}
extern "C" {
    pub fn lpeek(address: ::core::ffi::c_long) -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn lpeek_debounced(address: ::core::ffi::c_long) -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn lpoke(address: ::core::ffi::c_long, value: ::core::ffi::c_uchar);
}
extern "C" {
    pub fn lcopy(
        source_address: ::core::ffi::c_long,
        destination_address: ::core::ffi::c_long,
        count: ::core::ffi::c_uint,
    );
}
extern "C" {
    pub fn lfill(
        destination_address: ::core::ffi::c_long,
        value: ::core::ffi::c_uchar,
        count: ::core::ffi::c_uint,
    );
}
extern "C" {
    pub fn lfill_skip(
        destination_address: ::core::ffi::c_long,
        value: ::core::ffi::c_uchar,
        count: ::core::ffi::c_uint,
        skip: ::core::ffi::c_uchar,
    );
}
extern "C" {
    pub fn random32(range: u32) -> u32;
}
extern "C" {
    pub fn random16(range: u16) -> u16;
}
extern "C" {
    pub fn random8(range: u8) -> u8;
}
extern "C" {
    pub fn srand(seed: u32);
}
extern "C" {
    pub fn rand8(range: u8) -> u8;
}
extern "C" {
    pub fn rand16(range: u16) -> u16;
}
extern "C" {
    pub fn rand32(range: u32) -> u32;
}
extern "C" {
    pub static mut sector_buffer: [u8; 512usize];
}
extern "C" {
    pub fn mega65_clear_sector_buffer();
}
extern "C" {
    pub fn mega65_sdcard_reset();
}
extern "C" {
    pub fn mega65_fast();
}
extern "C" {
    pub fn mega65_sdcard_open();
}
extern "C" {
    pub fn mega65_sdcard_map_sector_buffer();
}
extern "C" {
    pub fn mega65_sdcard_unmap_sector_buffer();
}
extern "C" {
    pub fn mega65_sdcard_readsector(sector_number: u32) -> u8;
}
extern "C" {
    pub fn mega65_sdcard_writesector(sector_number: u32) -> u8;
}
extern "C" {
    pub fn mega65_sdcard_erase(first_sector: u32, last_sector: u32);
}
extern "C" {
    pub fn detect_target() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\brief Setup of the unit test reporting to the host machine\n \\param param testName Human readable name of the test\n \\param issueNum The mega65-core issue number that identifies the test issue"]
    pub fn unit_test_setup(testName: *mut ::core::ffi::c_char, issueNum: ::core::ffi::c_ushort);
}
extern "C" {
    #[doc = " \\brief Report a successful test with a optional message\n \\param msg Description of the successful test (NULL uses global testName)"]
    pub fn unit_test_ok(msg: *mut ::core::ffi::c_char);
}
extern "C" {
    #[doc = " \\brief Report a failed test with a optional message\n \\param msg Description of the failed test (NULL uses global testName)"]
    pub fn unit_test_fail(msg: *mut ::core::ffi::c_char);
}
extern "C" {
    #[doc = " \\brief Finish test procedure and tell m65 to exit"]
    pub fn unit_test_done();
}
extern "C" {
    #[doc = " \\brief Reports unit test result to the host machine\n \\param issue The issue number that identifies the test issue\n \\param sub The sub issue number (for multiple tests per issue)\n \\param status The test status to be sent"]
    pub fn unit_test_report(
        issue: ::core::ffi::c_ushort,
        sub: ::core::ffi::c_uchar,
        status: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\brief Reports current test name to the host machine\n \\param name The human-readable name of the current test"]
    pub fn unit_test_set_current_name(name: *mut ::core::ffi::c_char);
}
extern "C" {
    #[doc = " \\brief Logs a message on the host machine\n \\param msg The message to be logged"]
    pub fn unit_test_log(msg: *mut ::core::ffi::c_char);
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct m65_tm {
    pub tm_sec: ::core::ffi::c_uchar,
    pub tm_min: ::core::ffi::c_uchar,
    pub tm_hour: ::core::ffi::c_uchar,
    pub tm_mday: ::core::ffi::c_uchar,
    pub tm_mon: ::core::ffi::c_uchar,
    pub tm_year: ::core::ffi::c_ushort,
    pub tm_wday: ::core::ffi::c_uchar,
    pub tm_yday: ::core::ffi::c_int,
    pub tm_isdst: ::core::ffi::c_uchar,
}
extern "C" {
    pub fn getrtc(tm: *mut m65_tm);
}
extern "C" {
    pub fn setrtc(tm: *mut m65_tm);
}
